ontopia/src/test-data/xtm2/invalid/variant-missing-scope-duplicate.xtm
<topicMap xmlns="http://www.topicmaps.org/xtm/" version="2.0">  
  <topic id="topic">
    <name>
      <scope>
        <topicRef href="#command"/>
      </scope>
      <value>Topic</value>
      <variant>
        <scope>
          <topicRef href="#command"/> <!-- same as topic scope... -->
        </scope>
        <resourceData>TOPIC!</resourceData>
      </variant>
    </name>
  </topic>
</topicMap>
